<resources>
    <string name="app_name">KutumbLink</string>
    <string name="groups">Groups</string>
    <string name="events">Events</string>
    <string name="messages">Messages</string>
    <string name="photos">Phontos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="groups_fragment">Groups Blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="menu_name_array">
        <item>Dashboard</item>
        <item>Group</item>
        <item>Contacts</item>
    </string-array>

    <string name="share_kut">Share Kutumblink</string>
    <string name="rate_kut">Rate Kutumblink</string>
    <string name="contact">Contact</string>
    <string name="faq">FAQs</string>
    <string name="backup_grout">Backup Groups</string>
    <string name="restore_group">Restore Groups</string>
    <string name="messages_add_text">Add Message Link</string>
    <string name="addgroup">Add Group</string>
    <string name="addgroupsubtitle">Select icon and enter name, or click</string>
    <string name="msg_title">Message Title</string>
    <string name="msg_link_title">Message Link</string>

    <string name="evt_title">Events</string>
    <string name="evt_groups">Groups</string>

    <string name="photo_title">Photo Title</string>
    <string name="photo_link_title">Photo Link</string>
    <string name="hint_text">URL should start with http:// or https://</string>
    <string name="save_msg">Save Message Link</string>
    <string name="save_photo">Save Photo Link</string>
    <string name="invalid_title">Invalid title</string>
    <string name="invalid_url">Please enter valid url.</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="photo_saved_sucess">Photo Link is saved.</string>
    <string name="message_saved">Message Link is saved.</string>

    <string name="updated_sucess">Updated successfully.</string>
    <string name="message_text">Do you want to navigate to the message link?</string>

    <string name="gname_exists">Group name already exists</string>


    <string name="photo_message">Do you want to navigate to the photo link?</string>

    <string name="email">contact@britezest.com</string>
    <string name="faq1">
        <![CDATA[
        <b>1) Why are contacts not visible?</b><BR/>
        Go to your phone’s settings – privacy – contacts and give access.
        ]]>
        </string>

    <string name="faq2">
        <![CDATA[
        <b>2) Why do I see advertisements?</b><BR/>
        KutumbLink free App has advertisements and KutumbLink premium App has no advertisements.
        ]]>
        </string>

    <string name="faq3">
        <![CDATA[
        <b>3) How can I edit or delete a Group or an Event?</b><BR/>
       Long press on Group/Event name or click on Group/Event name and select Edit button at top right.
        ]]>
        </string>

    <string name="faq4">
        <![CDATA[
        <b>4) If a Contact has multiple phone numbers, which phone number is the text message sent to?</b><BR/>
       Text message is sent to the first iPhone or mobile number listed under the contact.
        ]]>
        </string>

    <string name="faq5">
        <![CDATA[
        <b>5) What happens to data entered in the App?</b><BR/>
       All Contacts, Groups, Events, Message Links and Photo Links input in the App stay on your phone only.
        ]]>
        </string>

    <string name="faq6">
        <![CDATA[
        <b>6) How can I send text or email to Group or Event contacts?</b><BR/>
       Select Group contacts and click on Action dropdown and select action. Click on Action dropdown in Event Details screen and select action.
        ]]>
        </string>
    <string name="settings">Settings</string>
    <string name="banner_ad_unit_id">ca-app-pub-4167699027441195/7064361067</string>
    <string name="intresttitle_ad_unit_id">ca-app-pub-4167699027441195/8541094269
    </string>
    <string name="no_contacts_list">No contacts available in this group. Please add contacts</string>
    <string name="to_enable">To enable actions, select contacts by clicking</string>
    <string name="enter_link">Please enter link</string>


    <string name="cp_contact_tab_title">Contacts</string>
    <string name="cp_group_tab_title">Groups</string>

    <string name="cp_no_contacts">No Contacts</string>
    <string name="cp_no_groups">No Groups</string>

    <plurals
        name="cp_group_description">
        <item quantity="one">(%1$d contact)</item>
        <item quantity="other">(%1$d contacts)</item>
    </plurals>

    <string name="cp_actionmode_selected">%d selected</string>

    <string name="cp_limit_reached">You can\'t pick more than %d contacts!</string>
    <string name="selected_no_contats">Selected contacts do not have mobile phone number</string>
    <string name="event_save">Event is saved.</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="del_event">Delete Event</string>
    <string name="contacts_not_email_id">Contact\'s doesn\'t have email id</string>
    <string name="need_mul_permission">Need Multiple Permissions</string>
    <string name="need_camera_loc_permis">This app needs Camera and Location permissions.</string>
    <string name="grant_permission">Go to Permissions to Grant  Camera and Location</string>
    <string name="date_lessthen">Today Date is Lesser than my Date</string>
    <string name="select_future_date">Please select future date.</string>
    <string name="invalid">Invalid</string>
    <string name="permissions_necessary">Permission necessary</string>
    <string name="exteranal_permis_necessery">External storage permission is necessary</string>
    <string name="without_permission">Cannot use this feature without requested permission</string>
    <string name="delet_group">Delete Group</string>
    <string name="group_alredy">Group name already exists</string>
    <string name="provid_group_name">Please provide Group name.</string>
    <string name="group_alredy_exist">Group name already exists</string>
    <string name="remove_successfully">Contacts(s) removed successfully.</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="invalid_suject">Invalid Subject</string>
    <string name="empty_body">Empty body</string>
    <string name="email_sent">Email sent.</string>
    <string name="email_sent_fail">Email sent Fail</string>
    <string name="select_date_time">Select date and time</string>
    <string name="please_enter_title">Please enter title.</string>
    <string name="add_photo_link">Add Photo Link</string>
    <string name="update_photo_link">Update Photo Link</string>
    <string name="update">Update</string>
    <string name="edit_photo_link">Edit Photo link</string>
    <string name="select_group_img">Select Group Image</string>
    <string name="select_contacts">Please select contacts</string>
    <string name="send_mail_client">Send mail client :</string>
    <string name="contact_dnt_have_email">Contact\'s doesn\'t have email id</string>
    <string name="selected_cont_not_email">Selected contacts do not have email.</string>
    <string name="you_dont_have_group">You don\'t have more groups</string>
    <string name="no_group_to_add">There are no groups to add this contact into.</string>
    <string name="remove_contact_from_group">Remove contacts from group</string>
    <string name="contact_copied">Contact(s) copied successfully.</string>
    <string name="sort_order_default">Sort Order - Default</string>
    <string name="save_event">Save Event</string>
    <string name="select_from_contact_list">Select from Contact List</string>
    <string name="contact_info_1_ncontact_info_2">Contact info 1  Contact info 2</string>
    <string name="description">Description</string>
    <string name="event_title">Event Title</string>
    <string name="date">Date</string>
    <string name="send_text_message">Send Text Message</string>
    <string name="send_email">Send Email</string>
    <string name="copy_to_group">Copy to Group</string>
    <string name="remove_from_group">Remove from Group</string>
    <string name="add_event">Add Event</string>
    <string name="email_contact_info">Email Contact Info</string>
    <string name="done">Done</string>
    <string name="add_remove_event_contacts">Add/Remove Event Contacts</string>
    <string name="event_name">Event Name</string>
    <string name="event_title_text">Event title Text</string>
    <string name="event_description">Event Description:</string>
    <string name="event_description_text">Event Description Text</string>
    <string name="delete_event">Delete Event</string>
    <string name="remove_group">Remove Group</string>
    <string name="add_photos_link">Add Photos Link</string>
    <string name="subject">Subject</string>
    <string name="event_contacts">Event Contacts:</string>
    <string name="no_contacts_available_in_this_group_n_please_add_contacts">No contacts available in this group.   Please add contacts</string>
    <string name="by_first_name">By First Name</string>
    <string name="by_last_name">By Last Name</string>
    <string name="default_string">Default</string>
</resources>
