<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_share_fragment"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/share_kut" />
        <item
            android:id="@+id/nav_rate_fragment"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/rate_kut" />
        <item
            android:id="@+id/nav_contact_fragment"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/contact" />

        <item
            android:id="@+id/nav_faq_fragment"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/faq" />
        <item
            android:id="@+id/nav_backup_fragment"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/backup_grout" />
        <item
            android:id="@+id/nav_restore_fragment"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/restore_group" />
    </group>
</menu>