<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kutumblink.appants.com.kutumblink.fragments.EditMessageFragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_margin="10dp"
       android:layout_height="wrap_content" android:orientation="vertical">
    <kutumblink.appants.com.kutumblink.utils.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:text="@string/photo_title" />

       <kutumblink.appants.com.kutumblink.utils.CustomEditTextView
           android:id="@+id/photo_title_text"
           android:minHeight="50dp"
           android:layout_width="match_parent"
           android:background="@drawable/shape"
           android:layout_marginBottom="5dp"
           android:layout_marginTop="5dp"
           android:padding="2dp"
           android:layout_height="wrap_content" />

       <kutumblink.appants.com.kutumblink.utils.CustomTextView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_marginBottom="5dp"
           android:layout_marginTop="5dp"
           android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
           android:text="@string/photo_link_title" />
       <kutumblink.appants.com.kutumblink.utils.CustomEditTextView
           android:id="@+id/photo_link_text"
           android:layout_width="match_parent"
           android:minLines="4"
           android:gravity="top"
           android:layout_marginBottom="5dp"
           android:layout_marginTop="5dp"
           android:padding="2dp"
           android:background="@drawable/shape"
           android:layout_height="wrap_content" />
      <kutumblink.appants.com.kutumblink.utils.CustomTextView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginBottom="5dp"
          android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
          android:text="@string/hint_text" />

      <Button
          android:id="@+id/save_btn_id"
          android:layout_margin="10dp"
          android:layout_width="200dp"
          android:background="@color/button_color_blue"
          android:layout_gravity="center_horizontal"
          android:text="@string/save_photo"
          android:textColor="@color/whitecolor"
          android:layout_height="wrap_content"/>
   </LinearLayout>


</FrameLayout>
