<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <kutumblink.appants.com.kutumblink.utils.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/date"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#101010" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/shape"
                android:orientation="horizontal">


                <kutumblink.appants.com.kutumblink.utils.CustomEditTextView
                    android:id="@+id/event_title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="0.8"
                    android:background="#FFFFFF"
                    android:enabled="false"
                    android:minHeight="50dp"

                    android:padding="2dp"
                    android:singleLine="true"
                    android:textColor="@color/black_color" />


                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginRight="10dp"

                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.1"
                    android:background="@mipmap/events_icon" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="0.1"
                    android:background="@drawable/clock"
                    android:visibility="gone" />
            </LinearLayout>

            <kutumblink.appants.com.kutumblink.utils.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/event_title"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#101010" />


            <kutumblink.appants.com.kutumblink.utils.CustomEditTextView
                android:id="@+id/photo_title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape"
                android:inputType="textCapSentences"
                android:minHeight="50dp"
                android:padding="2dp"
                android:singleLine="true" />

            <kutumblink.appants.com.kutumblink.utils.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/description"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#101010" />

            <kutumblink.appants.com.kutumblink.utils.CustomEditTextView
                android:id="@+id/photo_link_text"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape"
                android:gravity="top"
                android:maxLines="4"
                android:inputType="textMultiLine"
                android:padding="2dp" />

            <LinearLayout
                android:id="@+id/ll_contactslist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/line" />

                <kutumblink.appants.com.kutumblink.utils.CustomTextView
                    android:id="@+id/contact_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="5dp"
                    android:singleLine="true"
                    android:text="@string/event_contacts"
                    android:textSize="18sp" />


                <kutumblink.appants.com.kutumblink.utils.CustomTextView
                    android:id="@+id/tv_event_contactinfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="5dp"
                    android:lineSpacingExtra="12dp"
                    android:text="@string/contact_info_1_ncontact_info_2"
                    android:textColor="@color/black_color"
                    android:textSize="20sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/line" />


            </LinearLayout>


            <kutumblink.appants.com.kutumblink.utils.CustomTextView
                android:id="@+id/select_contactstext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape"
                android:drawableRight="@drawable/r_icon"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/select_from_contact_list"
                android:textColor="#101010"
                android:textSize="20sp" />

            <kutumblink.appants.com.kutumblink.utils.CustomTextView
                android:id="@+id/sort_order_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape"
                android:drawableRight="@drawable/r_icon"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/sort_order_default"
                android:textColor="#101010"
                android:textSize="20sp" />

            <Button
                android:id="@+id/save_btn_id"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="@color/button_color_blue"
                android:text="@string/save_event"
                android:textColor="@color/whitecolor"
                android:textSize="19sp" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>
