<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    android:background="#FBFBFB"


    >
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/edtcornershape"

        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/tv_addevent_new"

            android:orientation="horizontal">
            <kutumblink.appants.com.kutumblink.utils.CustomTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="@color/black_color"
                android:layout_weight="0.9"
                android:layout_marginLeft="15dp"
                android:text="@string/add_remove_event_contacts"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/add_remove_contact_icon"/>

        </LinearLayout>
        <View   android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <kutumblink.appants.com.kutumblink.utils.CustomTextView
                android:id="@+id/tv_eventsms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="@color/black_color"
                android:layout_weight="0.9"
                android:layout_marginLeft="15dp"
                android:text="@string/send_text_message"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:background="@mipmap/message_icon"/>

        </LinearLayout>
        <View   android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/line"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"


            android:orientation="horizontal">
            <kutumblink.appants.com.kutumblink.utils.CustomTextView
                android:id="@+id/tv_eventsendEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="@color/black_color"
                android:layout_weight="0.9"
                android:layout_marginLeft="15dp"
                android:text="@string/send_email"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/email_icon"/>

        </LinearLayout>
        <View   android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/line"/>




    </LinearLayout>
    </LinearLayout>

